cfn-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  CloudFormation Template for Roman Numerals Converter Application. This template creates a Python Flask Web Application on an Amazon Linux 2 EC2 Instance with a custom security group allowing HTTP connections on port 80 and SSH connections on port 22. The Roman Numerals Converter Application is downloaded from a Github repository and installed on Flask.
Parameters:
  myVPCid:
    Description: Choose the VPC Id.
    Type: AWS::EC2::VPC::Id

  myKeyName:
    Description: Chooe your key pair.
    Type: AWS::EC2::KeyPair::KeyName
    Default: instancekey
    ConstraintDescription: Please select key pair.
  
  myAMI:
    Description: Choose the image id.
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64

  myInstanceType:
    Description: EC2 Instance Type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.medium
      - t3.micro
      - t3.small
      - t3.medium
    ConstraintDescription: Please select a valid instance type.

Resources:
  mySG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allows HTTP and SSH connections
      SecurityGroupIngress: 
        - CidrIp: 0.0.0.0/0
          FromPort: 8080
          IpProtocol: TCP
          ToPort: 8080
        - CidrIp: 0.0.0.0/0
          FromPort: 22
          IpProtocol: TCP
          ToPort: 22
      Tags: 
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      VpcId: !Ref myVPCid

  myInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref myAMI
      InstanceType: !Ref myInstanceType
      KeyName: !Ref myKeyName
      SecurityGroupIds: 
        -  !Ref mySG
      Tags: 
        - Key: Name
          Value: web-server-of-stackname
      UserData: !Base64 |
        #!/bin/bash
        yum update -y
        yum install python3 python3-pip -y
        pip3 install flask
        cd /home/ec2-user
        FOLDER="https://raw.githubusercontent.com/ilhanigit/001-roman-numerals-converter/master"
        wget -P templates ${FOLDER}/templates/index.html
        wget -P templates ${FOLDER}/templates/result.html
        wget ${FOLDER}/roman-numerals-converter-app.py
        python3 roman-numerals-converter-app.py

Outputs: 
  WebSiteURL:
    Description: Roman Numerals Converter Application URL
    Value: !Join 
      - ''
      - - 'http://'
        - !GetAtt myInstance.PublicDnsName
        - ':8080'
